--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-/vendor/
 node_modules/
-npm-debug.log
-yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
+dist/
+*.class
+*.py[cod]
+*.log
+*.jar
+target/
+dist/
+.idea/
+TEST*.xml
+.DS_Store
+Thumbs.db
+*.app
+*.exe
+*.war
+*.mp4
+*.tiff
+*.avi
+*.flv
+*.mov
+*.wmv
+.buildpath
+.project
+.settings
+/vendor
+/composer.phar
+/composer.lock
+/package.json
+/package-lock.json
+/codecept.phar
+/phpunit.phar
+/phpunit.xml
 /.vagrant
-.phpunit.result.cache
+.php_cs.cache
+yarn.lock
+github.md
+.php-cs-fixer.cache
+IDEYiiCodeAutocompletion.php
+
+ToDo.md
