--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "bookin/yii2-awesome-bootstrap-checkbox": "dev-master",
     "kartik-v/yii2-widget-datepicker": "^1.4@dev",
     "kartik-v/yii2-widget-datetimepicker": "^1.4@dev",
-    "kartik-v/yii2-widget-growl": "^1.1",
+    "kartik-v/yii2-widget-growl": "1.1.2.*",
     "kartik-v/yii2-widget-select2": "^2.2",
     "kartik-v/yii2-widget-switchinput": "dev-master",
     "nesbot/carbon": "^2.51",
