--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "kartik-v/yii2-widget-datetimepicker": "^1.4@dev",
     "kartik-v/yii2-widget-growl": "1.1.2.*",
     "kartik-v/yii2-widget-select2": "^2.2",
-    "kartik-v/yii2-widget-switchinput": "dev-master",
+    "kartik-v/yii2-widget-switchinput": "^1.3",
     "nesbot/carbon": "^2.51",
     "ramsey/uuid": "^4.0@dev",
     "rmrevin/yii2-fontawesome": "*",
