--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "ramsey/uuid": "^4.0@dev",
     "rmrevin/yii2-fontawesome": "*",
     "webmozart/assert": "1.10.x-dev",
-    "yiisoft/yii2": "~2.0.4",
+    "yiisoft/yii2": "~2.0.43",
     "yiisoft/yii2-bootstrap": "^2.0"
   },
   "autoload": {
@@ -41,7 +41,10 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true
+    }
   },
   "fxp-asset": {
     "enabled": false
